--- a/template_Html/firebase/absen-lab.html
+++ b/template_Html/firebase/absen-lab.html
@@ -1,90 +1,125 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Absensi Kehadiran Laboratorium</title>
+    <title>Absensi Laboratorium - LabConnect</title>
+    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="path/to/your/globals.css"> </head>
-<body class="bg-background text-foreground">
-    <div class="flex flex-col min-h-screen">
-        <header class="sticky top-0 z-50 w-full bg-card/80 backdrop-blur-sm shadow-md">
-            <div class="container mx-auto flex h-16 items-center justify-between px-4 md:px-6">
-                <a href="#" class="flex items-center gap-2 font-bold text-lg text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-6 w-6"><path d="M10 2v7.31"/><path d="M14 9.31V2"/><path d="M12 22a7 7 0 0 0 7-7c0-2-1-3.7-3-5.2-1.4-1-3-2.3-3-3.8V2a2 2 0 0 0-4 0v1.3c0 1.5-1.6 2.8-3 3.8-2 1.5-3 3.3-3 5.2a7 7 0 0 0 7 7Z"/></svg>
-                    <span>LabConnect</span>
-                </a>
-            </div>
-        </header>
+    <!-- Google Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        /* Custom styles to match the theme */
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f7fafc; /* bg-card for the whole page */
+            color: #1a202c;
+        }
+        .font-headline {
+            font-weight: 800;
+            letter-spacing: -0.025em;
+        }
+        .text-primary {
+            color: #4f46e5;
+        }
+        .text-foreground-80 {
+            color: #4a5568;
+        }
+        .bg-accent {
+             background-color: #4f46e5;
+        }
+         .bg-accent:hover {
+             background-color: #4338ca;
+        }
+        .text-accent-foreground {
+            color: #ffffff;
+        }
+    </style>
+</head>
+<body class="antialiased">
 
-        <main class="flex-1 py-12 md:py-24 lg:py-32">
+    <!-- Header & Navigation -->
+    <header class="bg-white/80 backdrop-blur-md sticky top-0 z-50 border-b border-gray-200">
+        <div class="container mx-auto px-4 md:px-6">
+            <nav class="flex items-center justify-between h-16">
+                <a href="#" class="text-xl font-bold text-primary">LabConnect</a>
+                <a href="#" class="inline-flex items-center justify-center rounded-md bg-accent px-4 py-2 text-sm font-medium text-accent-foreground shadow-sm transition-colors hover:bg-accent/90">
+                    Kembali ke Beranda
+                </a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <!-- Attendance Section -->
+        <section id="absensi" class="w-full py-20 lg:py-32">
             <div class="container mx-auto px-4 md:px-6">
-                <div class="text-center mb-12">
-                    <h1 class="text-4xl font-bold tracking-tighter sm:text-5xl text-primary font-headline">
-                        Absensi Kehadiran Laboratorium
-                    </h1>
-                    <p class="max-w-[800px] mx-auto text-foreground/80 md:text-xl mt-4">
+                <div class="text-center space-y-4 mb-12">
+                    <h1 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl font-headline">Absensi Kehadiran Laboratorium</h1>
+                    <p class="mx-auto max-w-[700px] text-foreground-80 md:text-xl">
                         Sistem pencatatan kehadiran digital untuk keamanan dan administrasi.
                     </p>
                 </div>
-
-                <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-8 items-center">
-                    <div class="card flex flex-col items-center justify-center text-center p-8">
-                        <div class="card-header">
-                            <div class="p-4 bg-primary/10 rounded-full mx-auto">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-16 h-16 text-primary"><rect width="5" height="5" x="3" y="3" rx="1"/><rect width="5" height="5" x="16" y="3" rx="1"/><rect width="5" height="5" x="3" y="16" rx="1"/><path d="M21 16h-3a2 2 0 0 0-2 2v3"/><path d="M21 21v.01"/><path d="M12 7v3a2 2 0 0 1-2 2H7"/><path d="M3 12h.01"/><path d="M12 3h.01"/><path d="M12 16v.01"/><path d="M16 12h.01"/><path d="M21 12h.01"/><path d="M12 21h.01"/></svg>
-                            </div>
-                            <h2 class="card-title mt-4 text-2xl">Pindai Kode QR</h2>
-                        </div>
-                        <div class="card-content">
-                            <p class="text-foreground/80">
-                                Gunakan kamera ponsel Anda untuk memindai kode QR yang tersedia di pintu masuk dan keluar laboratorium untuk mencatat kehadiran Anda.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                             <button class="btn bg-primary text-primary-foreground">Buka Pemindai (Contoh)</button>
-                        </div>
+                <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-16 items-center">
+                    <div class="text-center md:text-left flex flex-col items-center md:items-start">
+                         <!-- QR Code Icon -->
+                        <svg class="w-24 h-24 text-primary mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 4.5A.75.75 0 014.5 3.75h4.5a.75.75 0 01.75.75v4.5a.75.75 0 01-.75.75h-4.5a.75.75 0 01-.75-.75v-4.5zM3.75 15A.75.75 0 014.5 14.25h4.5a.75.75 0 01.75.75v4.5a.75.75 0 01-.75.75h-4.5a.75.75 0 01-.75-.75v-4.5zM15 3.75A.75.75 0 0014.25 3h-4.5a.75.75 0 00-.75.75v4.5a.75.75 0 00.75.75h4.5a.75.75 0 00.75-.75v-4.5zM19.5 19.5a.75.75 0 01-.75.75h-4.5a.75.75 0 01-.75-.75v-4.5a.75.75 0 01.75-.75h4.5a.75.75 0 01.75.75v4.5z" />
+                        </svg>
+                        <h2 class="text-2xl font-bold font-headline mb-2">Pindai Kode QR</h2>
+                        <p class="text-foreground-80 mb-6 max-w-sm">
+                            Gunakan kamera ponsel Anda untuk memindai kode QR yang tersedia di pintu masuk dan keluar laboratorium untuk mencatat kehadiran Anda.
+                        </p>
+                        <button class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2">
+                            Buka Pemindai (Contoh)
+                        </button>
                     </div>
-
                     <div class="space-y-6">
-                        <div class="card">
-                            <div class="card-header flex-row gap-4 items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8 text-accent flex-shrink-0"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" x2="3" y1="12" y2="12"/></svg>
-                                <div>
-                                     <h3 class="card-title">Prosedur Masuk</h3>
-                                     <p class="card-description">Langkah-langkah saat memasuki lab.</p>
-                                </div>
-                            </div>
-                             <div class="card-content">
-                                <p class="text-foreground/80">
-                                    Sebelum memulai aktivitas, pastikan Anda memindai kode QR 'MASUK' untuk mencatat waktu kedatangan Anda.
-                                </p>
+                        <div class="rounded-lg border bg-white p-6 shadow-sm flex items-start gap-4">
+                            <!-- Login Icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-primary flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1" />
+                            </svg>
+                            <div>
+                                <h3 class="font-semibold text-lg">Prosedur Masuk</h3>
+                                <p class="text-sm text-foreground-80">Sebelum memulai aktivitas, pastikan Anda memindai kode QR 'MASUK' untuk mencatat waktu kedatangan Anda.</p>
                             </div>
                         </div>
-                         <div class="card">
-                            <div class="card-header flex-row gap-4 items-center">
-                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8 text-destructive flex-shrink-0"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
-                                <div>
-                                     <h3 class="card-title">Prosedur Keluar</h3>
-                                     <p class="card-description">Langkah-langkah saat meninggalkan lab.</p>
-                                </div>
+                         <div class="rounded-lg border bg-white p-6 shadow-sm flex items-start gap-4">
+                            <!-- Logout Icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-primary flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1" />
+                            </svg>
+                            <div>
+                                <h3 class="font-semibold text-lg">Prosedur Keluar</h3>
+                                <p class="text-sm text-foreground-80">Setelah selesai, jangan lupa untuk memindai kode QR 'KELUAR' untuk mencatat waktu kepulangan Anda.</p>
                             </div>
-                             <div class="card-content">
-                                <p class="text-foreground/80">
-                                   Setelah selesai, jangan lupa untuk memindai kode QR 'KELUAR' untuk mencatat waktu kepulangan Anda.
-                                </p>
+                        </div>
+                         <div class="rounded-lg border bg-white p-6 shadow-sm flex items-start gap-4">
+                            <!-- Info Icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-primary flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div>
+                                <h3 class="font-semibold text-lg">Mengapa Absensi Penting?</h3>
+                                <p class="text-sm text-foreground-80">Pencatatan kehadiran yang akurat sangat penting untuk rekam jejak keamanan, pemantauan penggunaan fasilitas, dan keperluan administrasi laboratorium.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </main>
+        </section>
 
-        <footer class="bg-primary text-primary-foreground">
-            <div class="container mx-auto px-4 py-8 md:px-6">
-                 <p class="text-sm text-center">© 2024 LabConnect. All rights reserved.</p>
-            </div>
-        </footer>
-    </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white">
+        <div class="container mx-auto py-8 px-4 md:px-6 text-center">
+            <p>&copy; 2024 LabConnect. All Rights Reserved.</p>
+        </div>
+    </footer>
+    
 </body>
 </html>
